Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/typeAnnotations/failures/Scopes.out
Scopes.java:10:2: compiler.err.cant.resolve: kindname.class, InnerTA, , 
Scopes.java:11:34: compiler.err.cant.resolve: kindname.class, InnerTA, , 
Scopes.java:11:15: compiler.err.cant.resolve: kindname.class, InnerTA, , 
3 errors
